<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/reserve_summary">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/summary"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/code"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/data"
                app:layout_constraintTop_toBottomOf="@+id/data" />

            <EditText
                android:id="@+id/etCode"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:hint="@string/code_hint"
                android:textColorLink="#000000"
                android:textSize="13sp"
                android:visibility="gone"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/tvCode"
                app:layout_constraintTop_toBottomOf="@+id/data"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />

            <ImageView
                android:id="@+id/check"
                android:layout_width="27dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/tick"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/etCode"
                app:layout_constraintTop_toBottomOf="@+id/data"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tvCode"
                app:layout_constraintTop_toBottomOf="@+id/tvCode" />

            <TextView
                android:id="@+id/tvPriceDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tvPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

            <LinearLayout
                android:layout_width="222dp"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceDiscount">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/reserve_summary_back"
                    android:padding="12dp"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonOk"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/reserve_summary_confirm"
                    android:padding="12dp"
                    android:text="@string/confirm"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>